tests/invalid/no-mac-method.pskcxml
<?xml version="1.0" encoding="UTF-8"?>

<!--
  An encrypted secret with a MAC but missing a global MACMethod and
  MAC key definition.
-->

<KeyContainer Version="1.0"
  xmlns="urn:ietf:params:xml:ns:keyprov:pskc"
  xmlns:ds="http://www.w3.org/2000/09/xmldsig#"
  xmlns:xenc="http://www.w3.org/2001/04/xmlenc#">
  <EncryptionKey>
    <ds:KeyName>Pre-shared-key</ds:KeyName>
  </EncryptionKey>
  <KeyPackage>
    <Key Id="12345678" Algorithm="urn:ietf:params:xml:ns:keyprov:pskc:hotp">
      <Data>
        <Secret>
          <EncryptedValue>
            <xenc:EncryptionMethod Algorithm="http://www.w3.org/2001/04/xmlenc#aes128-cbc"/>
            <xenc:CipherData>
              <xenc:CipherValue>AAECAwQFBgcICQoLDA0OD+cIHItlB3Wra1DUpxVvOx2lef1VmNPCMl8jwZqIUqGv</xenc:CipherValue>
            </xenc:CipherData>
          </EncryptedValue>
          <ValueMAC>LP6xMvjtypbfT9PdkJhBZ+D6O4w=</ValueMAC>
        </Secret>
      </Data>
    </Key>
  </KeyPackage>
</KeyContainer>
